src/log/build_2025-06-20_12-00-11/ainex_neural_control/stderr.log
  File "/home/bilhr2025/Downloads/template_tB/ainex_bilhr_ws/src/install/ainex_neural_control/lib/python3.12/site-packages/ainex_neural_control/robot_neural_controller.py", line 204
    >>>>>>> 95ef6c8c9214baac116108eb514714625ed3fa97
             ^
SyntaxError: invalid decimal literal

